--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+	</head>
+	<body>
 
+	</body>
+</html>
 <html>
 <head>
 	<title>Lazy Open</title>
