--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@ body {
 </style>
 </head>
 <body>
-  <h1 >Animation Examples</h1>
+  <h1 >Early Animation Examples</h1>
+  <p>
+    Created by transcoding a 60fps .mp4 to a .png sequence. Sequence encoded to .bpg animation at 25fps
+  </p>
     <ul>
       <li>
         <a href="bpg1920/bpg1.html">4 sec civic video at 1920 wide</a>
@@ -36,5 +39,14 @@ body {
         </li>
       </ul>
 
+    <h1 >Further Animation Examples</h1>
+    <p>
+      Created by transcoding a 30fps .mp4 to a .png sequence. Sequence encoded to .bpg animation at 25fps. This fixed an earlier mistep, stuttered playback and long loads caused by transcoding a png sequence from a 60fps timeline.
+    </p>
+      <ul>
+        <li>
+          <a href="bpg1280/bpg5.html">4 sec civic video at 1280 wide</a>
+        </li>
+      </ul>
 </body>
 </html>
