added .mp4 to 1280

--- a/bpg1280Still/bpg5.html
+++ b/bpg1280Still/bpg5.html
@@ -16,15 +16,12 @@
 <body>
   <h1>This is with a 4sec video at 1280 wide, 120 frames</h1>
   <p>
-    .bpg animation = 235kb
+    .mp4 = 4mb
   </p>
-<img src="civic1280.bpg">
-<p>
-  .mp4 = 3.6mb
-</p>
-<video src="civicR_1.mp4" autoplay loop>
-
-</video>
+  <p>
+    animation = 235kb
+  </p>
+<img src="civic1280-1.bpg">
 <p>
 <a href="javascript:history.back()">Go Back</a>
 </p>
