--- a/bpg1280/bpg5.html
+++ b/bpg1280/bpg5.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>BPG animation tests – 1280 wide</title>
-   <script type="text/javascript" src="bpgdec8a.js"></script>
+   <!-- <script type="text/javascript" src="bpgdec8a.js"></script> -->
    <style media="screen">
    body {
      margin-left: 100px;
@@ -14,14 +14,14 @@
    </style>
 </head>
 <body>
-  <h1>This is with a 4sec video at 1280 wide, 120 frames</h1>
+  <!-- <h1>This is with a 4sec video at 1280 wide, 120 frames</h1>
   <p>
     .bpg animation = 235kb
   </p>
 <img src="civic1280.bpg">
 <p>
   .mp4 = 3.6mb
-</p>
+</p> -->
 <video src="civicR_1.mp4" autoplay loop>
 
 </video>
