--- a/kilo/bpg5.html
+++ b/kilo/bpg5.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>BPG animation tests – 1280 wide</title>
-   <!-- <script type="text/javascript" src="bpgdec8a.js"></script> -->
+   <script type="text/javascript" src="bpgdec8a.js"></script>
    <style media="screen">
    body {
      margin-left: 100px;
@@ -16,15 +16,12 @@
 <body>
   <h1>This is with a 4sec video at 1280 wide, 120 frames</h1>
   <p>
-    .bpg animation = 235kb
+    .mp4 = 4mb
   </p>
-<img src="civic1280.bpg">
-<p>
-  .mp4 = 3.6mb
-</p>
-<video src="civicR_1.mp4" autoplay loop>
-
-</video>
+  <p>
+    animation = 235kb
+  </p>
+<img src="civicKilo.bpg">
 <p>
 <a href="javascript:history.back()">Go Back</a>
 </p>
