--- a/bpg1280/bpg5.html
+++ b/bpg1280/bpg5.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>BPG animation tests – 1280 wide</title>
-   <!-- <script type="text/javascript" src="bpgdec8a.js"></script> -->
+   <script type="text/javascript" src="bpgdec8a.js"></script>
    <style media="screen">
    body {
      margin-left: 100px;
