--- a/index.html
+++ b/index.html
@@ -48,5 +48,18 @@ body {
           <a href="bpg1280/bpg5.html">4 sec civic video at 1280 wide</a>
         </li>
       </ul>
+
+      <h1>Mobile Inline Video</h1>
+      <p>
+        320px wide videos designed to play inline on a mobile device
+      </p>
+        <ul>
+          <li>
+            <a href="bpg320/bpg6.html">320 px wide bpg asset</a>
+          </li>
+          <li>
+            <a href="mp4320/index.html">320 px wide inline mp4 asset</a>
+          </li>
+        </ul>
 </body>
 </html>
