--- a/mp4320/index.html
+++ b/mp4320/index.html
@@ -105,5 +105,8 @@ and open the template in the editor.
                 <source src="video/civicMobile.mp4" type="video/mp4">
             </video>
         </div>
+        <p>
+          <a href="http://codepen.io/newshorts/pen/yNxNKR">http://codepen.io/newshorts/pen/yNxNKR</a>
+        </p>
     </body>
 </html>
