--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ body {
           <li>
             <a href="mp4320/index.html">320 px wide inline mp4 asset</a>
           </li>
+          <li>
+            <a href="bpg320Low/index.html">320 px wide bpg with the -m option set to 1 (fastest)</a>
+          </li>
         </ul>
 </body>
 </html>
