--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@ body {
           <li>
             <a href="bpg320Low/index.html">320 px wide bpg with the -m option set to 1 (fastest)</a>
           </li>
+          <li>
+            <a href="bpg320LowStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Stress Test. Load 6 at once</a>
+          </li>
+          <li>
+            <a href="bpg320LowSuperStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Super Stress Test. Load 12 at once</a>
+          </li>
         </ul>
 </body>
 </html>
