--- a/mp4320/index.html
+++ b/mp4320/index.html
@@ -101,7 +101,7 @@ and open the template in the editor.
     <body>
 
         <div class="container">
-            <video width="320" height="480" controls poster="video/poster.png" playsinline webkit-playsinline>
+            <video width="640" height="960" controls poster="video/poster.png" playsinline webkit-playsinline webview.allowsInlineMediaPlayback = YES;>
                 <source src="video/civicMobile.mp4" type="video/mp4">
             </video>
         </div>
