--- a/index.html
+++ b/index.html
@@ -70,5 +70,20 @@ body {
             <a href="bpg320LowSuperStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Super Stress Test. Load 12 at once</a>
           </li>
         </ul>
+
+
+      <h1>Mobile bpg performance tests</h1>
+      <p>
+         640 wide -m 1 -b 8 settings (m = encoding options 1= fastest/biggest, 9=slowest/smallest) (b = bitdepth, 8, 10, or 12)
+      </p>
+        <ul>
+          <li>
+            <a href="sigLow640/sig.html">640 px wide bpg asset</a>
+          </li>
+        </ul>
+
+
+
+
 </body>
 </html>
