--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@ body {
             <a href="sigLow640/sig.html">640 px wide bpg asset</a>
           </li>
         </ul>
+        <p>
+           640 wide -m 1 -b 8 settings (m = encoding options 1= fastest/biggest, 9=slowest/smallest) (b = bitdepth, 8, 10, or 12) (q = quantization; smaller gives better quality,
+                     range: 0-51, default = 29)
+        </p>
+          <ul>
+            <li>
+              <a href="sigLowLow640/sig.html">640 px wide bpg asset with q=51</a>
+            </li>
+          </ul>
 
 
 
