--- a/sigLowLow640super/sig.html
+++ b/sigLowLow640super/sig.html
@@ -11,6 +11,17 @@
     .bpg animation = 553kb
   </p>
 <img src="sigLowLow640.bpg">
+<img src="sigLowLow6402.bpg">
+<img src="sigLowLow6403.bpg">
+<img src="sigLowLow6404.bpg">
+<img src="sigLowLow6405.bpg">
+<img src="sigLowLow6406.bpg">
+<img src="sigLowLow6407.bpg">
+<img src="sigLowLow6408.bpg">
+<img src="sigLowLow6409.bpg">
+<img src="sigLowLow64010.bpg">
+<img src="sigLowLow64011.bpg">
+<img src="sigLowLow64012.bpg">
 <p>
 <a href="javascript:history.back()">Go Back</a>
 </p>
