--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ body {
           </li>
         </ul>
         <p>
+          <br>
            640 wide -m 1 -b 8 -q 51 settings (m = encoding options 1= fastest/biggest, 9=slowest/smallest) (b = bitdepth, 8, 10, or 12) (q = quantization; smaller gives better quality,
                      range: 0-51, default = 29)
         </p>
@@ -91,11 +92,12 @@ body {
             </li>
           </ul>
           <p>
+            <br>
              fastest encoding (-m 1) and fastest quantizzation (-q 51)Stress Tests
           </p>
             <ul>
               <li>
-                <a href="sigLowLow640super/sig.html">( 640 px wide .bpg asset with q=51 ) * 6 = Stress</a>
+                <a href="sigLowLow640stress/sig.html">( 640 px wide .bpg asset with q=51 ) * 6 = Stress</a>
               </li>
               <li>
                 <a href="sigLowLow640super/sig.html">( 640 px wide .bpg asset with q=51 ) * 12 = Super Stress</a>
