--- a/sigLowLow640/sig.html
+++ b/sigLowLow640/sig.html
@@ -6,11 +6,11 @@
    <script type="text/javascript" src="bpgdec8a.js"></script>
 </head>
 <body>
-  <h1></h1>
+  <h1>Lowest quantization settings = 51</h1>
   <p>
-    .bpg animation = 81kb
+    .bpg animation = 13kb
   </p>
-<img src="sigLow640.bpg">
+<img src="sigLowLow640.bpg">
 <p>
 <a href="javascript:history.back()">Go Back</a>
 </p>
