--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
           </ul>
           <p>
             <br>
-             fastest encoding (-m 1) and fastest quantizzation (-q 51)Stress Tests
+             fastest encoding (-m 1) and fastest quantization (-q 51)Stress Tests
           </p>
             <ul>
               <li>
@@ -103,8 +103,18 @@ body {
                 <a href="sigLowLow640super/sig.html">( 640 px wide .bpg asset with q=51 ) * 12 = Super Stress</a>
               </li>
             </ul>
-
-
+            <p>
+              <br>
+               premultiplied and then fastest encoding (-m 1) and variable quantization of 40 vs 20
+            </p>
+            <ul>
+            <li>
+              <a href="pre640Low/sig.html">640 px wide .bpg asset with -m 1 -q 40 -premul (premultiplied)</a>
+            </li>
+            <li>
+              <a href="pre640LowQhi/sig.html">640 px wide .bpg asset with -m 1 -q 20 -premul (premultiplied)</a>
+            </li>
+          </ul>
 
 </body>
 </html>
