--- a/pre640Low/sig.html
+++ b/pre640Low/sig.html
@@ -10,7 +10,7 @@
   <p>
     .bpg animation = 42kb
   </p>
-<img src="sigLow640premulq20.bpg">
+<img src="sigLow640premulq40m1.bpg">
 <p>
 <a href="javascript:history.back()">Go Back</a>
 </p>
