image magic trick

--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@ body {
               <a href="pre640LowQhi/sig.html">640 px wide .bpg asset with -m 1 -q 20 -premul (premultiplied)</a>
             </li>
           </ul>
+        <h1>imagemagic gif to png first test </h1>
+          <ul>
+            <li>
+              <a href="gif/gif.html">320 px wide made into gif, then imagemagic to png then bpgenc to .bpg</a>
+            </li>
+          </ul>
+          <p>
 
 </body>
 </html>
