--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ body {
           <li>
             <a href="bpg320LowSuperStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Super Stress Test. Load 12 at once</a>
           </li>
+          <li><a href="http://www.easy-bits.com/iphone-inline-video-autostart?tag=85231-194e2-3a77d-d7670">test using the easybits method</a></li>
         </ul>
 
 
