--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@ body {
           <li>
             <a href="bpg320LowSuperStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Super Stress Test. Load 12 at once</a>
           </li>
-          <li><a href="http://www.easy-bits.com/iphone-inline-video-autostart?tag=85231-194e2-3a77d-d7670">test using the easybits method</a></li>
+          <li><a href="">test using the easybits method</a></li>
+
         </ul>
+        <p data-height="268" data-theme-id="0" data-slug-hash="yNxNKR" data-default-tab="result" data-user="newshorts" class='codepen'>See the Pen <a href='http://codepen.io/newshorts/pen/yNxNKR/'>InlineVideo</a> by Mike Newell (<a href='http://codepen.io/newshorts'>@newshorts</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 
       <h1>Mobile bpg performance tests</h1>
