--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ body {
         </ul>
         <p data-height="268" data-theme-id="0" data-slug-hash="yNxNKR" data-default-tab="result" data-user="newshorts" class='codepen'>See the Pen <a href='http://codepen.io/newshorts/pen/yNxNKR/'>InlineVideo</a> by Mike Newell (<a href='http://codepen.io/newshorts'>@newshorts</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+<p data-height="268" data-theme-id="0" data-slug-hash="yNxNKR" data-default-tab="js" data-user="newshorts" class='codepen'>See the Pen <a href='http://codepen.io/newshorts/pen/yNxNKR/'>InlineVideo</a> by Mike Newell (<a href='http://codepen.io/newshorts'>@newshorts</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 
       <h1>Mobile bpg performance tests</h1>
