--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -37,7 +37,7 @@ hit play a couple times, its kinda jenky
 
 -->
 
-<video controls width="300" style="display: none;">
+<video controls width="100%" style="display: none;">
   <source src="http://www.w3schools.com/html/mov_bbb.mp4">
 </video>
 <canvas></canvas>
