--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -37,8 +37,8 @@ hit play a couple times, its kinda jenky
 
 -->
 
-<video controls width="675" style="display: none;">
-  <source src="http://www.w3schools.com/html/mov_bbb.mp4">
+<video controls width="675px" style="display: none;">
+  <source src="civic.mp4">
 </video>
 <canvas></canvas>
 
