--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -37,7 +37,7 @@ hit play a couple times, its kinda jenky
 
 -->
 
-<video controls width="675px" style="display: none;">
+<video style="display: none; width: 675; height: 1334;">
   <source src="civic.mp4">
 </video>
 <canvas></canvas>
