auto load better size

--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -37,10 +37,10 @@ hit play a couple times, its kinda jenky
 
 -->
 
-<video style="display: none; width: 675; height: 1334;">
+<video style="display: none;">
   <source src="civic.mp4">
 </video>
-<canvas></canvas>
+<canvas width="675" height="1336"></canvas>
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
