--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -40,7 +40,7 @@ hit play a couple times, its kinda jenky
 <video style="display: none;">
   <source src="civic.mp4">
 </video>
-<canvas width="675" height="1336"></canvas>
+<canvas></canvas>
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
