--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ body {
 
     <h1>Full Screen Background Experiments</h1>
       <ul>
+
         <li>
           <a href="canvasbg/canvas.html">Some Canvas Method that is sorta working</a>
         </li>
@@ -50,34 +51,29 @@ body {
       </ul>
 
       <h1>Mobile Inline Video</h1>
-      <p>
-        320px wide videos designed to play inline on a mobile device
-      </p>
-        <ul>
-          <li>
-            <a href="bpg320/bpg6.html">320 px wide bpg asset</a>
-          </li>
-          <li>
-            <a href="mp4320/index.html">320 px wide inline mp4 asset</a>
-          </li>
-          <li>
-            <a href="bpg320Low/index.html">320 px wide bpg with the -m option set to 1 (fastest)</a>
-          </li>
-          <li>
-            <a href="bpg320LowStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Stress Test. Load 6 at once</a>
-          </li>
-          <li>
-            <a href="bpg320LowSuperStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Super Stress Test. Load 12 at once</a>
-          </li>
-          <li><a href="">test using the easybits method</a></li>
+      <li>
+        <h1><a href="inlinevideo/index.html">Working Full Screen Video. Inline!!!</a></h1>
+      </li>
 
         </ul>
-        
+
 <p data-height="268" data-theme-id="0" data-slug-hash="yNxNKR" data-default-tab="js" data-user="newshorts" class='codepen'>See the Pen <a href='http://codepen.io/newshorts/pen/yNxNKR/'>InlineVideo</a> by Mike Newell (<a href='http://codepen.io/newshorts'>@newshorts</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 
       <h1>Mobile bpg performance tests</h1>
+      <ul>
+        <li>
+          <a href="bpg320Low/index.html">320 px wide bpg with the -m option set to 1 (fastest)</a>
+        </li>
+        <li>
+          <a href="bpg320LowStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Stress Test. Load 6 at once</a>
+        </li>
+        <li>
+          <a href="bpg320LowSuperStress/index.html">320 px wide bpg with the -m option set to 1 (fastest) + Super Stress Test. Load 12 at once</a>
+        </li>
+        <li><a href="">test using the easybits method</a></li>
+      </ul>
       <p>
          640 wide -m 1 -b 8 settings (m = encoding options 1= fastest/biggest, 9=slowest/smallest) (b = bitdepth, 8, 10, or 12)
       </p>
