--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -16,7 +16,7 @@ width:  100%;
 height: 100%;
 margin: 0px;
 }
-#canvas { background:url(poster.png) }
+#canvas { background:url(poster.png); z-index: -100; position: fixed;}
 </style>
   </head>
 
@@ -38,7 +38,7 @@ hit play a couple times, its kinda jenky
 
 -->
 
-<video style="display: none;">
+<video style="display: none;" loop>
   <source src="civic.mp4">
 </video>
 <canvas></canvas>
@@ -46,8 +46,6 @@ hit play a couple times, its kinda jenky
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/index.js"></script>
-
-
 
 
   </body>
