actual mobile video asset

--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -15,8 +15,8 @@ html, body {
 width:  100%;
 height: 100%;
 margin: 0px;
+background:url(poster.png);
 }
-#canvas { background:url(poster.png); z-index: -100; position: fixed;}
 </style>
   </head>
 
@@ -39,7 +39,7 @@ hit play a couple times, its kinda jenky
 -->
 
 <video style="display: none;" loop>
-  <source src="civic.mp4">
+  <source src="civic1.mp4">
 </video>
 <canvas></canvas>
 
