--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -15,7 +15,7 @@ html, body {
 width:  100%;
 height: 100%;
 margin: 0px;
-background:url(poster.png);
+background:url(poster1.png);
 background-size: cover;
 }
 </style>
