--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
         <h1><a href="inlinevideo/index.html">Working Full Screen Video. Inline!!!</a></h1>
       </li>
       <li>
-github mirror 
+        <a href="https://github.com/newshorts/InlineVideo">github mirror that this is based on</a> 
       </li>
         </ul>
 
