--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -39,13 +39,13 @@ hit play a couple times, its kinda jenky
 
 -->
 
-<video style="display: none;" loop>
+<video style="display: none;" playsinline webkit-playsinline autoplay="true">
   <source src="civic1.mp4">
 </video>
 <canvas></canvas>
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
+    <script src="js/requestAnimationFrame.js"></script>
         <script src="js/index.js"></script>
 
 
