swap mobile asset

--- a/inlinevideo/index.html
+++ b/inlinevideo/index.html
@@ -40,7 +40,7 @@ hit play a couple times, its kinda jenky
 -->
 
 <video style="display: none;" playsinline webkit-playsinline autoplay="true">
-  <source src="civic1.mp4">
+  <source src="1A_6819_Honda_RPA_Kilo-Coupe_Signature_101_Pan_v03.mp4">
 </video>
 <canvas></canvas>
 
