--- a/enhancedFallback/index.html
+++ b/enhancedFallback/index.html
@@ -4,6 +4,8 @@
   <style media="screen">
   .slide {
       position:absolute;
+      width: 650px;
+      height: 1134px;
   }
 
   .slide:nth-child(1) {
