--- a/enhancedFallback/index.html
+++ b/enhancedFallback/index.html
@@ -4,66 +4,111 @@
   <style media="screen">
   .slide {
       position:absolute;
-      width: 650px;
-      height: 1134px;
+      width: 750px;
+      height: 1050px;
   }
 
   .slide:nth-child(1) {
-      -webkit-animation: fade 3s 0s infinite;
+      -webkit-animation: fade 3.375s 0.25s infinite;
       z-index:10;
   }
   .slide:nth-child(2) {
-      -webkit-animation: fade 3s 0.2307692308s infinite;
+      -webkit-animation: fade 3.375s 0.375s infinite;
       z-index:10;
   }
   .slide:nth-child(3) {
-      -webkit-animation: fade 3s 0.4615384615s infinite;
+      -webkit-animation: fade 3.375s 0.5s infinite;
       z-index:10;
   }
   .slide:nth-child(4) {
-      -webkit-animation: fade 3s 0.6923076923s infinite;
+      -webkit-animation: fade 3.375s 0.625s infinite;
       z-index:10;
   }
   .slide:nth-child(5) {
-      -webkit-animation: fade 3s 0.9230769231s infinite;
+      -webkit-animation: fade 3.375s 0.75s infinite;
       z-index:10;
   }
   .slide:nth-child(6) {
-      -webkit-animation: fade 3s 1.1538461538s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(6) {
-      -webkit-animation: fade 3s 1.1538461538s infinite;
+      -webkit-animation: fade 3.375s 0.875s infinite;
       z-index:10;
   }
   .slide:nth-child(7) {
-      -webkit-animation: fade 3s 1.3846153846s infinite;
+      -webkit-animation: fade 3.375s 1.0s infinite;
       z-index:10;
   }
   .slide:nth-child(8) {
-      -webkit-animation: fade 3s 1.6153846154s infinite;
+      -webkit-animation: fade 3.375s 1.125s infinite;
       z-index:10;
   }
   .slide:nth-child(9) {
-      -webkit-animation: fade 3s 1.8461538462s infinite;
+      -webkit-animation: fade 3.375s 1.25s infinite;
       z-index:10;
   }
   .slide:nth-child(10) {
-      -webkit-animation: fade 3s 2.0769230769s infinite;
+      -webkit-animation: fade 3.375s 1.375s infinite;
       z-index:10;
   }
   .slide:nth-child(11) {
-      -webkit-animation: fade 3s  2.3076923077s infinite;
+      -webkit-animation: fade 3.375s  1.5s infinite;
       z-index:10;
   }
   .slide:nth-child(12) {
-      -webkit-animation: fade 3s 2.7692307692s infinite;
+      -webkit-animation: fade 3.375s 1.625s infinite;
       z-index:10;
   }
   .slide:nth-child(13) {
-      -webkit-animation: fade 3s 3s infinite;
+      -webkit-animation: fade 3.375s 1.75s infinite;
       z-index:10;
   }
+  .slide:nth-child(14) {
+      -webkit-animation: fade 3.375s 1.875s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(15) {
+      -webkit-animation: fade 3.375s 2.0s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(16) {
+      -webkit-animation: fade 3.375s 2.125s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(17) {
+      -webkit-animation: fade 3.375s 2.25s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(18) {
+      -webkit-animation: fade 3.375s 2.375s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(19) {
+      -webkit-animation: fade 3.375s 2.5s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(20) {
+      -webkit-animation: fade 3.375s 2.625s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(21) {
+      -webkit-animation: fade 3.375s 2.75s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(22) {
+      -webkit-animation: fade 3.375s 2.875s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(23) {
+      -webkit-animation: fade 3.375s 3.0s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(24) {
+      -webkit-animation: fade 3.375s 3.125s infinite;
+      z-index:10;
+  }
+  .slide:nth-child(25) {
+      -webkit-animation: fade 3.375s 3.375s infinite;
+      z-index:10;
+  }
+
 
 @-webkit-keyframes fade {
     0%{
@@ -99,4 +144,16 @@
     <img src="pics/civic_Video-011.jpg" class="slide"/>
     <img src="pics/civic_Video-012.jpg" class="slide"/>
     <img src="pics/civic_Video-013.jpg" class="slide"/>
+    <img src="pics/civic_Video-014.jpg" class="slide"/>
+    <img src="pics/civic_Video-015.jpg" class="slide"/>
+    <img src="pics/civic_Video-016.jpg" class="slide"/>
+    <img src="pics/civic_Video-017.jpg" class="slide"/>
+    <img src="pics/civic_Video-018.jpg" class="slide"/>
+    <img src="pics/civic_Video-019.jpg" class="slide"/>
+    <img src="pics/civic_Video-020.jpg" class="slide"/>
+    <img src="pics/civic_Video-021.jpg" class="slide"/>
+    <img src="pics/civic_Video-022.jpg" class="slide"/>
+    <img src="pics/civic_Video-023.jpg" class="slide"/>
+    <img src="pics/civic_Video-024.jpg" class="slide"/>
+    <img src="pics/civic_Video-025.jpg" class="slide"/>
   </body>
