--- a/enhancedFallback/index.html
+++ b/enhancedFallback/index.html
@@ -4,8 +4,8 @@
   <style media="screen">
   .slide {
       position:absolute;
-      width: 750px;
-      height: 1050px;
+      width: 100%;
+      height: 100%;
   }
 
   .slide:nth-child(1) {
