--- a/enhancedFallback/index.html
+++ b/enhancedFallback/index.html
@@ -1,138 +1,145 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style media="screen">
+    html,body {
+    width:  100%;
+    height: 100%;
+    margin: 0px;
+    background:url(civic_Video-001.jpg);
+    background-size: cover;
+    }
+    .slide {
+        position:absolute;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
 
-<head>
-  <style media="screen">
-  .slide {
-      position:absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-  }
-
-  .slide:nth-child(1) {
-      -webkit-animation: fade 3.5s 0.25s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(2) {
-      -webkit-animation: fade 3.5s 0.375s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(3) {
-      -webkit-animation: fade 3.5s 0.5s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(4) {
-      -webkit-animation: fade 3.5s 0.625s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(5) {
-      -webkit-animation: fade 3.5s 0.75s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(6) {
-      -webkit-animation: fade 3.5s 0.875s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(7) {
-      -webkit-animation: fade 3.5s 1.0s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(8) {
-      -webkit-animation: fade 3.5s 1.125s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(9) {
-      -webkit-animation: fade 3.5s 1.25s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(10) {
-      -webkit-animation: fade 3.5s 1.375s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(11) {
-      -webkit-animation: fade 3.5s  1.5s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(12) {
-      -webkit-animation: fade 3.5s 1.625s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(13) {
-      -webkit-animation: fade 3.5s 1.75s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(14) {
-      -webkit-animation: fade 3.5s 1.875s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(15) {
-      -webkit-animation: fade 3.5s 2.0s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(16) {
-      -webkit-animation: fade 3.5s 2.125s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(17) {
-      -webkit-animation: fade 3.5s 2.25s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(18) {
-      -webkit-animation: fade 3.5s 2.375s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(19) {
-      -webkit-animation: fade 3.5s 2.5s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(20) {
-      -webkit-animation: fade 3.5s 2.625s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(21) {
-      -webkit-animation: fade 3.5s 2.75s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(22) {
-      -webkit-animation: fade 3.5s 2.875s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(23) {
-      -webkit-animation: fade 3.5s 3.0s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(24) {
-      -webkit-animation: fade 3.5s 3.125s infinite;
-      z-index:10;
-  }
-  .slide:nth-child(25) {
-      -webkit-animation: fade 3.5s 3.375s infinite;
-      z-index:10;
-  }
+    .slide:nth-child(1) {
+        -webkit-animation: fade 3.5s 0.25s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(2) {
+        -webkit-animation: fade 3.5s 0.375s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(3) {
+        -webkit-animation: fade 3.5s 0.5s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(4) {
+        -webkit-animation: fade 3.5s 0.625s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(5) {
+        -webkit-animation: fade 3.5s 0.75s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(6) {
+        -webkit-animation: fade 3.5s 0.875s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(7) {
+        -webkit-animation: fade 3.5s 1.0s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(8) {
+        -webkit-animation: fade 3.5s 1.125s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(9) {
+        -webkit-animation: fade 3.5s 1.25s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(10) {
+        -webkit-animation: fade 3.5s 1.375s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(11) {
+        -webkit-animation: fade 3.5s  1.5s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(12) {
+        -webkit-animation: fade 3.5s 1.625s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(13) {
+        -webkit-animation: fade 3.5s 1.75s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(14) {
+        -webkit-animation: fade 3.5s 1.875s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(15) {
+        -webkit-animation: fade 3.5s 2.0s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(16) {
+        -webkit-animation: fade 3.5s 2.125s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(17) {
+        -webkit-animation: fade 3.5s 2.25s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(18) {
+        -webkit-animation: fade 3.5s 2.375s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(19) {
+        -webkit-animation: fade 3.5s 2.5s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(20) {
+        -webkit-animation: fade 3.5s 2.625s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(21) {
+        -webkit-animation: fade 3.5s 2.75s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(22) {
+        -webkit-animation: fade 3.5s 2.875s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(23) {
+        -webkit-animation: fade 3.5s 3.0s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(24) {
+        -webkit-animation: fade 3.5s 3.125s infinite;
+        z-index:10;
+    }
+    .slide:nth-child(25) {
+        -webkit-animation: fade 3.5s 3.375s infinite;
+        z-index:10;
+    }
 
 
-@-webkit-keyframes fade {
-    0%{
-      opacity: 1;
-   }
-   15% {
-      opacity:0;
-   }
-   25%{
-      opacity: 0;
-   }
-   90% {
-      opacity:0;
-   }
-   100% {
-      opacity:1;
-   }
-}
-  </style>
-</head>
+  @-webkit-keyframes fade {
+      0%{
+        opacity: 1;
+     }
+     15% {
+        opacity:0;
+     }
+     25%{
+        opacity: 0;
+     }
+     90% {
+        opacity:0;
+     }
+     100% {
+        opacity:1;
+     }
+  }
+    </style>
+  </head>
 
-<body>
+  <body>
     <img src="pics/civic_Video-001.jpg" class="slide"/>
     <img src="pics/civic_Video-002.jpg" class="slide"/>
     <img src="pics/civic_Video-003.jpg" class="slide"/>
@@ -159,3 +166,5 @@
     <img src="pics/civic_Video-024.jpg" class="slide"/>
     <img src="pics/civic_Video-025.jpg" class="slide"/>
   </body>
+
+</html>
