--- a/enhancedFallback/index.html
+++ b/enhancedFallback/index.html
@@ -8,6 +8,7 @@
     height: 100%;
     margin: 0px;
     background:url(civic_Video-001.jpg);
+    background-size: cover;
     }
     .slide {
         position:absolute;
