added plays inline

--- a/html-canvas-video-player-gh-pages/index.html
+++ b/html-canvas-video-player-gh-pages/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="video-wrapper js-video-wrapper">
 		<div class="video-responsive">
-			<video class="video js-video" muted autoplay="true">
+			<video class="video js-video" playsinline webkit-playsinline muted autoplay="true">
 				<source src="medium.mp4" type="video/mp4">
 			</video>
 
